Fixed sockaddr_in.sin6_addr memcpy on IPv6 clientside, modified sperator for host/port in peers list to handle IPv6

--- a/src/conf/obsidian.conf
+++ b/src/conf/obsidian.conf
@@ -3,7 +3,7 @@ node_descr =   This is the first test node of Obsidian
 node_location = Paris,France
 data_dir =  /var/lib/adep/data
 tmp_dir = /var/lib/adep/tmp
-peers = 88.191.75.35:11337
+peers = 88.191.75.35 11337
 connect_timeout = 5
 keepalive_timeout = 90
 
