Implemented Notion of public Dexp Nodes, allowing unknown peers to fetch a node's content, but ignoring their own files and new announces

--- a/src/conf/obsidian.conf
+++ b/src/conf/obsidian.conf
@@ -25,3 +25,13 @@ listening_addr = 0.0.0.0
 log_stdout = 1
 log_level = 4
 log_file = /var/log/dexp/dexp.log
+
+
+# public node
+# ===========
+#   The public_node options allows to give authorization to 
+#   unknown peers to fetch the files catalog and process to documents download. 
+#   Catalog and extra announces from public peers are not taken into account.
+
+public_node = false
+
