--- a/src/conf/obsidian.conf
+++ b/src/conf/obsidian.conf
@@ -1,8 +1,8 @@
 node_name  =   Document node 1
 node_descr =   This is the first test node of Obsidian
 node_location = Paris,France
-data_dir =  /var/lib/adep/data
-tmp_dir = /var/lib/adep/tmp
+data_dir =  /var/lib/obsidian/data
+tmp_dir = /var/lib/obsidian/tmp
 peers = 88.191.75.35 11337
 keepalive_timeout = 300
 
